--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -15,6 +15,7 @@ header{
     position: fixed;
     width: 100%;
     background-color: #fff;
+    z-index: 100;
 }
 
 h1{
@@ -23,25 +24,15 @@ h1{
     line-height: 1.2;
 }
 
-.category-section,
-.featured-section,
-.sales-section,
-.instagram-section,{
-    div{
-        z-index: -10;
-
-    }
-}
-
 h2{
     @include m.section-heading;
-
 }
 
 p{
     font-weight: v.$body-reg;
     font-size: .7rem;
     line-height: 1.7;
+    
 }
 
 a{
